Update legal terms and footer attribution

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                  <div class="bg-white rounded-lg shadow-xl p-8">
                     <div class="text-center mb-8">
                         <div class="inline-block bg-[#E8F4F8] text-[#003F5C] rounded-lg px-6 py-3 font-bold shadow-md">
-                            JEDEN CZYNNIEZGODNY Z PRAWEM
+                            JEDEN CZYN NIEZGODNY Z PRAWEM
                         </div>
                         <div class="text-5xl my-2">👇</div>
                         <div class="inline-block bg-[#003F5C] text-white rounded-lg px-6 py-3 font-bold shadow-md">
@@ -215,7 +215,7 @@
         </main>
 
         <footer class="text-center py-8 text-sm text-[#73A2B8]">
-            <p>Infografika stworzona na podstawie materiałów o pograniczu prawa administracyjnego i karnego.</p>
+            <p>Infografika stworzona na podstawie materiałów o pograniczu prawa administracyjnego i karnego. Aleksandra Mikrut, Antoni Pannier</p>
         </footer>
     </div>
 
@@ -319,3 +319,4 @@
     </script>
 </body>
 </html>
+
