--- a/index.html
+++ b/index.html
@@ -213,6 +213,23 @@
                 </div>
             </section>
         </main>
+<!-- Sekcja kodu QR -->
+        <section class="py-12 text-center">
+            <h2 class="text-2xl font-bold text-[#003F5C] mb-6">Zeskanuj, aby otworzyć stronę</h2>
+            <div class="flex justify-center">
+                <img 
+                    src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&color=003F5C&bgcolor=FFFFFF&data=https://anth00ny88.github.io/infografika-prawo/" 
+                    alt="Kod QR do strony infografiki"
+                    class="shadow-md border border-[#003F5C] rounded-lg p-2 bg-white"
+                >
+            </div>
+            <p class="mt-4 text-sm text-[#346A82]">
+                lub wejdź bezpośrednio: <br>
+                <a href="https://anth00ny88.github.io/infografika-prawo/" class="underline text-[#003F5C]">
+                    anth00ny88.github.io/infografika-prawo
+                </a>
+            </p>
+        </section>
 
         <footer class="text-center py-8 text-sm text-[#73A2B8]">
             <p>Infografika stworzona na podstawie materiałów o pograniczu prawa administracyjnego i karnego. Aleksandra Mikrut, Antoni Pannier</p>
